# Games101

./: .gitignore  CMakeLists.txt
Assignment1/: CMakeLists.txt  main.cpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: CMakeLists.txt
Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
Assignment7/: BVH.cpp  CMakeLists.txt  Scene.cpp
Assignment8/: CMakeLists.txt  main.cpp
CGL/: CMakeLists.txt
CGL/src/: osdtext.h
